--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "publicPath": "./",
   "scripts": {
     "init": "npm ci && cd webapp && npm run init",
-    "transpile": "tsc",
+    "transpile": "tsc --p tsconfig.json && tspr --tsConfig tsconfig.json",
+    "transpile:prod": "tsc --p tsconfig.production.json && tspr --tsConfig tsconfig.json",
     "watch": "tsc -w",
     "start": "npm run init && npm run start:dev",
     "start:dev": "concurrently -p \"[{time} - {name}]\" -n \"ReactApp,Electron\" -c \"bgMagenta.black.bold,bgCyan.black.bold\" -t \"hh:mm:ss a\" \"npm run start:react\" \"npm run start:electron\"",
@@ -24,19 +25,19 @@
     "pre:build:linux": "sh pre-build-linux.sh",
     "pre:build:mac": "sh pre-build-mac.sh",
     "pre:build:win": "sh pre-build-win.sh",
-    "build": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder",
-    "build:all": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder -mwl",
-    "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --linux -p never",
-    "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --mac -p never",
-    "build:win": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --win -p never",
-    "pack": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --dir",
+    "build": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder",
+    "build:all": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder -mwl",
+    "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --linux -p never",
+    "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --mac -p never",
+    "build:win": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --win -p never",
+    "pack": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --dir",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
     "postinstall": "electron-builder install-app-deps",
-    "publish": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder build -p always",
-    "publish:linux": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder build -p always",
-    "publish:mac": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder build -p always",
-    "publish:win": "npm run build:react && npm run transpile && npm run set_env:prod & electron-builder build -p always",
+    "publish": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
+    "publish:linux": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
+    "publish:mac": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
+    "publish:win": "npm run build:react && npm run transpile:prod && npm run set_env:prod & electron-builder build -p always",
     "test:react": "cd webapp/ && npm run test",
     "test:react:snapshot": "cd webapp/ && npm run test:snapshot:update",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -89,6 +90,7 @@
     "@types/utf8": "^2.1.6",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "5.3.0",
     "cross-env": "7.0.3",
