--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,19 +1,17 @@
 # Define individuals or teams that are responsible for code in a repository.
 # More details are here: https://help.github.com/articles/about-codeowners/
 
-*                               @DeFiCh/app-engineers
+/.github/                       @defich/admin
 
-.github/**                      @DeFiCh/admin
+tslint.json                     @defich/admin
+tsconfig.json                   @defich/admin
+tsconfig.*.json                 @defich/admin
 
-tslint.json                     @DeFiCh/admin
-tsconfig.json                   @DeFiCh/admin
-tsconfig.*.json                 @DeFiCh/admin
+package.json                    @defich/admin
+package-lock.json               @defich/admin
 
-package.json                    @DeFiCh/admin
-package-lock.json               @DeFiCh/admin
+*.sh                            @defich/admin
+*.cmd                           @defich/admin
+*.ps1                           @defich/admin
 
-*.sh                            @DeFiCh/admin
-*.cmd                           @DeFiCh/admin
-*.ps1                           @DeFiCh/admin
-
-LICENSE                         @DeFiCh/admin
+LICENSE                         @defich/admin
