--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,11 +30,6 @@
     }
   },
   "dependencies": {
-    "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-docs": "^6.1.18",
-    "@storybook/addon-links": "^6.1.18",
-    "@storybook/addons": "^6.1.18",
-    "@storybook/react": "^6.1.18",
     "ajv": "^7.1.1",
     "async": "^3.2.0",
     "axios": "^0.21.1",
@@ -47,10 +42,10 @@
     "crypto-js": "^4.0.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.3",
-    "electron-log": "^4.3.1",
+    "electron-log": "^4.3.2",
     "http-status-codes": "^2.1.4",
     "is-electron": "^2.2.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.1",
     "random-binary": "^1.0.3",
@@ -64,7 +59,7 @@
     "react-dom": "^17.0.1",
     "react-ellipsis-text": "1.2.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "6.15.1",
+    "react-hook-form": "6.15.3",
     "react-icons": "^4.2.0",
     "react-md-spinner": "^1.0.0",
     "react-number-format": "4.4.4",
@@ -76,10 +71,12 @@
     "reactstrap": "^8.9.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "reselect": "4.0.0",
     "semver": "7.3.4",
     "shuffle-array": "^1.0.1",
     "uid": "^2.0.0",
-    "uifx": "^2.0.7"
+    "uifx": "^2.0.7",
+    "zxcvbn": "4.4.2"
   },
   "devDependencies": {
     "@babel/core": "~7.12.17",
@@ -108,9 +105,10 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-redux-i18n": "0.0.11",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-transition-group": "^4.4.0",
+    "@types/react-transition-group": "^4.4.1",
     "@types/redux-logger": "^3.0.8",
     "@types/semver": "7.3.4",
+    "@types/zxcvbn": "4.4.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
@@ -128,7 +126,7 @@
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-airbnb-typescript": "~12.3.1",
-    "eslint-config-prettier": "~7.2.0",
+    "eslint-config-prettier": "~8.0.0",
     "eslint-import-resolver-alias": "~1.1.2",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-jsx-a11y": "~6.4.1",
@@ -138,7 +136,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "~6.1.0",
     "html-loader": "~1.3.2",
-    "html-webpack-plugin": "~5.1.0",
+    "html-webpack-plugin": "~5.2.0",
     "image-minimizer-webpack-plugin": "2.2.0",
     "imagemin-jpegtran": "7.0.0",
     "imagemin-optipng": "8.0.0",
