--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,17 +1,19 @@
 # Define individuals or teams that are responsible for code in a repository.
 # More details are here: https://help.github.com/articles/about-codeowners/
 
-/.github/                       @DeFiCh/admin
+/.github/                               @DeFiCh/admin
+/.github/oss-governance-bot.yml         @fuxingloh @izzycsy
+/.github/governance.yml                 @fuxingloh @izzycsy
 
-tslint.json                     @DeFiCh/admin
-tsconfig.json                   @DeFiCh/admin
-tsconfig.production.json        @DeFiCh/admin
+tslint.json                             @DeFiCh/admin
+tsconfig.json                           @DeFiCh/admin
+tsconfig.production.json                @DeFiCh/admin
 
-package.json                    @DeFiCh/admin
-package-lock.json               @DeFiCh/admin
+package.json                            @DeFiCh/admin
+package-lock.json                       @DeFiCh/admin
 
-*.sh                            @DeFiCh/admin
-*.cmd                           @DeFiCh/admin
-*.ps1                           @DeFiCh/admin
+*.sh                                    @DeFiCh/admin
+*.cmd                                   @DeFiCh/admin
+*.ps1                                   @DeFiCh/admin
 
-LICENSE                         @DeFiCh/admin
+LICENSE                                 @DeFiCh/admin
