--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "electron-log": "^4.3.2",
     "electron-progressbar": "^2.0.0",
     "electron-root-path": "^1.0.16",
-    "electron-updater": "^4.3.5",
+    "electron-updater": "4.3.5",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "http-status-codes": "^2.1.4",
@@ -80,27 +80,28 @@
     "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.12.17",
+    "@babel/preset-typescript": "^7.13.0",
     "@electron/typescript-definitions": "^8.8.0",
     "@types/auto-launch": "^5.0.1",
     "@types/base-64": "^0.1.3",
     "@types/crypto-js": "^4.0.1",
+    "@types/fs-extra": "9.0.7",
     "@types/ini": "^1.3.30",
-    "@types/node": "^12.20.4",
+    "@types/node": "12.20.4",
     "@types/random-string": "0.0.28",
     "@types/semver": "7.3.4",
     "@types/utf8": "^2.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "6.0.0",
     "cross-env": "7.0.3",
     "electron": "11.3.0",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "1.0.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.22.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.8",
     "install": "^0.13.0",
@@ -110,7 +111,7 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.3"
   },
   "build": {
     "productName": "defi-app",
@@ -122,19 +123,25 @@
       {
         "from": "./webapp/build/release/",
         "to": "./webapp",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "extraResources": [
       {
         "from": "./binary/",
         "to": "./binary",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       },
       {
         "from": "./DO_NOT_SAVE_WALLETS_HERE",
         "to": "../DO_NOT_SAVE_WALLETS_HERE",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
@@ -154,7 +161,9 @@
       ]
     },
     "linux": {
-      "target": ["AppImage"]
+      "target": [
+        "AppImage"
+      ]
     },
     "win": {
       "target": "NSIS"
